<resources>
    <string name="app_name">SocialSoftware</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="tome">To me</string>
    <string name="tax">Tax</string>
    <string name="charity">Charity</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="item_value">Service value</string>
    <string name="minimum_donation">Minimum donation allowed</string>
    <string name="facebook_app_id">778174298975708</string>
    <string name="email">e-mail</string>
    <string name="hello_whats_your_name">Hello. What is your name?</string>
    <string name="whats_you_email">What is your e-mail?</string>
    <string name="you_will_need_password">You will need a password.</string>
    <string name="next">Next</string>
    <string name="neighboard">Neighboard</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="complement">Complement</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="concentment">Ao se cadastrar na plataforma você aceita os termos de uso do aplicativo e entende que o "termo de uso" tem que ser um link em azul para levar a uma activity com o termo e que aqui tem que ser um texto relativamente grande para poder ocupar um espaço bom e chamar a atenção do usuario</string>
    <string name="dont_worry_we_will_not_send_spam">Don\'t worry, we will not send SPAM</string>
    <string name="term_of_use"> </string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="instituitions">Institutions</string>
    <string name="services">Services</string>
    <string name="know_partner_institutions">Know the partner institutions</string>
    <string name="see_and_search_services_registered">see and search services registered</string>
    <string name="item_name">Service name</string>
    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="amount">Amount</string>
    <string name="we_need_some_information_about_your_item">We need some information about your item</string>
    <string name="this_field_is_required">Required field</string>
    <string name="where_your_money_goes">Where your money goes?</string>
    <string name="chose_instituitions_to_donate">Chose institutions to donate</string>
    <string name="you_need_to_chose_at_least_one">You need to chose at least one</string>
    <string name="pequeno_50">Lorem ipsum dolor sit amet, consectetuer adipiscin</string>
    <string name="medio_300">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec.</string>
    <string name="grande_600">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu,</string>
    <string name="new_item">New item</string>
</resources>
