<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_1_new_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_name_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/et_surname_new_user"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.50"
            android:hint="@string/surname" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_email_new_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_1_new_user"
        android:hint="@string/email" />

    <LinearLayout
        android:id="@+id/ll_2_new_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email_new_user"
        android:weightSum="1"

        >

        <EditText
            android:id="@+id/et_password_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/et_repeat_password_new_user"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.50"
            android:hint="@string/repeat_password" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_salvar_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/signup"
        android:layout_below="@id/ll_2_new_user"/>

</RelativeLayout>