<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/iv_logo_new_user_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/social" />

    <TextView
        android:id="@+id/tv_what_name_new_user_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo_new_user_1"
        android:layout_marginTop="20dp"
        android:text="@string/hello_whats_your_name"
        android:textSize="22sp" />


    <LinearLayout
        android:id="@+id/ll_1_new_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_what_name_new_user_1"
        android:layout_marginTop="5dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_name_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/et_surname_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:hint="@string/surname" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_next_new_user_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/next" />

    <View
        android:id="@+id/v_separator_new_user_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/btn_next_new_user_1"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_termo_new_user_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/v_separator_new_user_1"
        android:text="@string/concentment"
        android:layout_marginBottom="5dp"/>


</RelativeLayout>