<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">


    <TextView
        android:id="@+id/tv_apresentation_new_item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/we_need_some_information_about_your_item"
        android:textSize="22sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_item_name_new_item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_apresentation_new_item_1"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_item_name_new_item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_description_new_item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/il_item_name_new_item_1"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/et_description_new_item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLength="300"
            android:maxLines="4" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_value_new_item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/il_description_new_item_1"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/et_value_new_item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_value"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_amount_new_item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/il_value_new_item_1"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/et_amount_new_item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_next_new_item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/next" />

    <View
        android:id="@+id/v_separator_new_item_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/btn_next_new_item_1"
        android:background="@android:color/darker_gray" />


</RelativeLayout>