<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/iv_logo_new_user_2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/social" />

    <TextView
        android:id="@+id/tv_what_email_new_user_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo_new_user_2"
        android:layout_marginTop="20dp"
        android:text="@string/whats_you_email"
        android:textSize="22sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/il__email_new_user_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_what_email_new_user_2"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_email_new_user_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_what_email_new_user_2"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_next_new_user_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/next" />

    <View
        android:id="@+id/v_separator_new_user_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/btn_next_new_user_2"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_termo_new_user_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/v_separator_new_user_2"
        android:layout_marginBottom="5dp"
        android:text="@string/dont_worry_we_will_not_send_spam" />


</RelativeLayout>