<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_item_name_fragment_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_name_fragment_personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_item_surname_fragment_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_surname_fragment_personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_item_email_fragment_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_email_fragment_personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_item_phone_fragment_personal_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_phone_fragment_personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>